--- a/project/templates/search.html
+++ b/project/templates/search.html
@@ -11,7 +11,7 @@
     <div class='container'>
         <ul class='list-group' id="tweet">
          {% for element in content %}
-        <li class='list-group-item'> {{ element }}</li>
+        <li class='list-group-item list-group-item-danger'> {{ element['tweet'] }}</li>
         {% endfor %}
         </ul>
     </div>    
